# model-100-interface

./: .gitignore  Cargo.toml  README.md  histo.jl
.github/workflows/: rust.yml
formats/: data continuation.hexpat  data_formats.md  header.hexpat
src/: args.rs  cassette.rs  main.rs  misc.rs  parser.rs
src/commands/: decode.rs
src/commands/decode/: mod.rs  raw.rs  text.rs
src/formats/: mod.rs  raw.rs  text.rs
