[package]
name = "trs80-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitvec = "1.0.1"
clap = { version = "4.4.8", features = ["derive"] }
hound = "3.5.1"
num-traits = "0.2.17"
