[package]
name = "mti"
description = "Cassette interface for the TRS-80 Model 100"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bitvec = "1.0.1"
clap = { version = "4.4.8", features = ["derive"] }
cpal = "0.15.2"
hound = "3.5.1"
num-traits = "0.2.17"
parking_lot = "0.12.1"
strsim = "0.10.0"
